samples/_failures_safe/1761189961_40272b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c21744f7.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_c21744f7.c:159:14: error: ‘TOKEN’ undeclared (first use in this function)
  159 |         case TOKEN
      |              ^~~~~
./samples/SAFE/__tmp_c21744f7.c:159:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c21744f7.c:159:9: error: expected ‘:’ or ‘...’ at end of input
  159 |         case TOKEN
      |         ^~~~
./samples/SAFE/__tmp_c21744f7.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c21744f7.c:159:9: error: expected declaration or statement at end of input
